@@ -35,7 +35,7 @@ public abstract class BaseEntity implements CsvMappable {
      * Ném IllegalArgumentException nếu value null hoặc rỗng.
      */
     protected void validateRequired(String value, String fieldName) {
-        if (value == null || value.isBlank()) {
+        if (value == null || value.trim().isEmpty()) {
             throw new IllegalArgumentException(fieldName + " is required and cannot be blank.");
         }
     }
