@@ -22,7 +22,7 @@ public enum EmployeeStatus {
      * Parse chuỗi từ CSV (không phân biệt hoa/thường).
      */
     public static EmployeeStatus fromString(String value) {
-        if (value == null || value.isBlank()) {
+        if (value == null || value.trim().isEmpty()) {
             throw new IllegalArgumentException("EmployeeStatus cannot be null or blank.");
         }
         return EmployeeStatus.valueOf(value.trim().toUpperCase());
